--- a/devCity/package.json
+++ b/devCity/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "galio-framework": "^0.5.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-redux": "^7.1.0",
